# motion-detection-cv

./: .gitignore  CMakeLists.txt
include/: bbox.h  dataset.h  handle_ground_truth.h  matching.h  metrics.h  motion.h  sift.h
src/: bbox.cpp  dataset.cpp  evaluate_metrics.cpp  handle_ground_truth.cpp  main.cpp  mainIteration.cpp  matching.cpp  metrics.cpp  motion.cpp  sift.cpp
